# fronius-pv-monitoring

./: .gitignore  .infra.local.example  .publish-guard  AGENTS.md  CHANGELOG.md  README.md  aggregate.py  aggregate_1min.py  aggregate_daily.py  aggregate_monthly.py  aggregate_statistics.py  battery_control.py  battery_scheduler.py  check_single_instance.sh  collector.py  config.py  db_init.py  db_utils.py  fritzdect_collector.py  fronius_api.py  gunicorn_config.py  host_role.py  logrotate.sh  modbus_quellen.py  modbus_v3.py  monitor.sh  monitor_collector.sh  monitor_steuerbox.sh  monitor_wattpilot.sh  monitor_web_service.sh  pv-automation.service  pv-config.py  pv-expert.sh  pv-observer.service  pv-shutdown-persist.service  pv-wattpilot.service  pyproject.toml  requirements.txt  restart_webserver.sh  solar_forecast.py  (+7 more)
.github/: copilot-instructions.md  pull_request_template.md
archive/: battery_scheduler.py.archived_20260228
automation/: HARDWARE_SETUP.md  OFFENE_FRAGEN.md  README.md  STRATEGIEN.md  TODO.md  __init__.py  battery_control.py
config/: battery_config_dump.json  battery_control.json  color_config.json  efficiency_table.json  fritz_config.json  fronius_attachment_state.json  geometry_config.json  heizpatrone_fritz_reference.json  nq_impedance.json  soc_param_matrix.json  solar_calibration.json  statistics_corrections.json
diagnos/: __init__.py  config.py  health.py  integrity.py
doc/: ABC_TRENNUNGSPOLICY.md  AGGREGATION_PIPELINE.md  AUTOMATION_ARCHITEKTUR.md  AUTOMATION_AUDIT_2026-04-26.md  BATTERIE_STRATEGIEN.md  BATTERY_ALGORITHM.md  DB_SCHEMA.md  (+23 more)
(+246 files in other folders)
